2007-07-16  Akim Demaille  <demaille@gostai.com>

	Avoid undefined values
	* src/parser/bison/ugrammar.y: Actions not defined should set
	the result to 0 to avoid stupid debugging sessions.
	(OPERATOR, OPERATOR_ID, OPERATOR_ID_PARAM, OPERATOR_VAR)
	(BINDER): Now use a Symbol for them.
	* src/parser/bison/utoken.l: Adjust their scanning.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Make first compilation easier
	* src/ast/Makefile.am: If location.hh is not generated, ask for it.
	* src/parser/bison/bison.mk (generate-parser): New, a hook for
	the previous Makefile.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	libport/Makefile.am
	* Makefile.am: Use it.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	merge -r 1269:1298 https://svn.gostai.com/svn/kernel1/trunk

	2007-07-13  Akim Demaille  <demaille@gostai.com>
	Remove incorrect nonterminal aliases
	* src/urbi/trunk/kernel1/src/parser/bison/ugrammar.y: Remove
	explicit strings that were made to be aliases for terminals,
	but it is not accepted but Bison like this, it believes they
	are fresh tokens.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Tidy grammar
	* src/parser/bison/ugrammar.y: Reorder some rules.
	Remove the strings that Bison interprets as tokens, not aliases
	for nonterminals.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	More primitives
	* src/object/primitives.cc: Add shutdown and reboot primitives.
	Unfortunately not yet callable.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Upgrade grammar
	* src/parser/bison/ugrammar.y: Remove all types, use <expr> instead.
	(new_exp): Activate and use it.

2007-07-13  Guillaume Deslandes  <deslandes@gostai.com>

	Add primitives for floats
	* src/object/primitives.cc: Add operators and base functions.

2007-07-13  Guillaume Deslandes  <deslandes@gostai.com>

	* all.hh: Remove include of ast/op-exp.hh.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	operator<< for slot_type